<resources>
    <string name="app_name">Fenicios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizzas_salgadas">Pizzas salgadas</string>
    <string name="product_name">PRODUCT NAME</string>
    <string name="home">Cardápio</string>
    <string name="cart">Carrinho</string>
    <string name="profile">Eu</string>
    <string name="addToCart">Adicionar ao carrinho</string>
    <string name="finalizingThePurchase">Finalizar Compra</string>
    <string name="cartValor">R$ %1$s</string>
    <string name="defaultValue">1</string>
    <string name="amountTitle">Quantidade</string>
    <string name="sizeTitle">Tamanho</string>
    <string name="big">Grande</string>
    <string name="small">Pequena</string>
    <string name="average">Média</string>
    <string name="confirm">Avançar</string>
    <string name="cancel">Cancelar</string>
    <string name="inputNumber">Insira seu número de telefone</string>
    <string name="inputPassword">Senha</string>
    <string name="enter">Entrar</string>
    <string name="register">Registrar</string>
    <string name="resendCode">Reenviar código</string>
    <string name="cpf">CPF</string>
    <string name="name">Nome e sobrenome</string>
    <string name="passwordConfirm">Confirmar senha</string>
    <string name="verificationCode">Código de verificação</string>
    <string name="connectOtherNumber">conectar-se com outro número</string>
    <string name="loginMessage">Sabemos que está com fome…\n mas antes faça login utilizando seu número de celular.</string>
    <string name="sentCode">Um código de verificação foi enviado para o número: \n \n %1$s \n \n digite ele no campo abaixo e envie, por favor.</string>
    <string name="notRecieve">Não recebeu? clique no botão abaixo após o período de espera.</string>
    <string name="welcome">Parece que você é novo por aqui.\nMe conte seu nome e email e tenha um bom apetite.</string>
    <string name="categories">Explore as categorias</string>
    <string name="welcomeUser">Seja bem-vindo \n %1$s \n</string>
    <string name="product_price">A partir de R$ %1$s</string>
    <string name="defaultPrice">A partir de R$ %1$s.</string>
    <string name="Sizes">Tamanhos</string>
    <string name="Description">Descrição</string>
    <string name="smallPrice">Pequena: 25cm por R$ %1$s.</string>
    <string name="averagePrice">Média: 30cm por R$ %1$s.</string>
    <string name="bigPrice">Grande: 35cm por R$ %1$s.</string>
    <string name="category">"Categoria: "</string>
    <string name="cartQtd">"Quantidade: %1$s"</string>
    <string name="cartProductName">Produto: %1$s</string>
    <string name="cartPrice">Preço final: R$ %1$s</string>
    <string name="sizeProduct">Tamanho: %1$s</string>
    <string name="excludeItem">Retirar do carrinho</string>
    <string name="numberPhone">Número de telefone:</string>
    <string name="excludeAccount">Excluir conta</string>
    <string name="logOut">Logout</string>
    <string name="userName">Nome:</string>
    <string name="address">Endereço de entrega:</string>
    <string name="inputNewName">Digite seu nome:</string>
    <string name="save">salvar</string>
    <string name="district">Bairro:</string>
    <string name="street">Rua:</string>
    <string name="numberHouse">Número da casa/apt:</string>
    <string name="purchaseValue">Valor a pagar:</string>
    <string name="totalPrice">"R$ "</string>
    <string name="cartValue">R$ %1$s</string>
    <string name="payment_form1">Cartão de crédito/débito</string>
    <string name="requests">Pedidos</string>
    <string name="purchaseValueRequest">Valor pago: R$ %1$s</string>
    <string name="statusRequest">Status do pedido: %1$s</string>
    <string name="addressRequest">Endereço de entrega: %1$s</string>
    <string name="email">"Email"</string>
    <string name="pedidos">Pedidos em execução</string>
    <string name="userEmail">Email:</string>
    <string name="createAccAndEnter">CRIAR CONTA E ENTRAR</string>
</resources>