<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui_innerApp.productsdetails.ProductDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Pizza de Brigadeiro" />

        <TextView
            android:id="@+id/detailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/defaultPrice"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Sizes"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailSmallPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smallPrice"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/detailAveragePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averagePrice"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/detailBigPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bigPrice"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Description"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textColor="?android:textColorSecondary"
            tools:text="Ingredientes: brigadeiro e morango." />

        <Button
            android:layout_marginBottom="60dp"
            android:id="@+id/btnCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/gray"
            android:text="@string/addToCart" />

    </LinearLayout>
</ScrollView>