<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/district"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/editDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/street"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/editStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/numberHouse"
        android:textColor="@color/black"
        android:textSize="17sp"/>


    <EditText
        android:id="@+id/edit_NumberHouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveAddress"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/cancelBtnEditAddress"
            android:layout_margin="16dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>



    </LinearLayout>
</LinearLayout>