<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_margin="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/optionsBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/amountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:backgroundTint="@color/primary_700"
                android:src="@drawable/subtraction_icon"
                android:id="@+id/imageBtnSubtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtAmount"
                android:layout_marginHorizontal="10dp"
                android:textSize="33sp"
                android:text="@string/defaultValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:backgroundTint="@color/blue"
                android:src="@drawable/add_icon"
                android:id="@+id/imageBtnSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="25dp"
        android:id="@+id/sizeLlayout"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionsBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:text="@string/sizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radioGroupSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioBig"
                android:textSize="20sp"
                android:text="@string/big"
                android:src="@drawable/add_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radioAverage"
                android:textSize="20sp"
                android:text="@string/average"
                android:src="@drawable/add_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radioSmall"
                android:textSize="20sp"
                android:text="@string/small"
                android:src="@drawable/add_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:padding="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeLlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_marginHorizontal="15dp"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnCancel"
            android:textSize="10sp"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>