<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:layout_margin="10dp"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llRequests"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/priceRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchaseValueRequest" />


            <TextView
                android:id="@+id/statusRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statusRequest" />

            <TextView
                android:id="@+id/AddressRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressRequest" />

        </LinearLayout>
</androidx.cardview.widget.CardView>
