<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/llLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"
                android:text="@string/purchaseValue"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/purchaseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:text="@string/cartValue"
                android:textAlignment="center"
                android:textSize="33sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sizeLlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/optionsBox">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Forma de pagamento:"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_icon"
                    android:text="@string/payment_form1"
                    android:textSize="20sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/optionsBox">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Endereço de entrega:"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/txtDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/district" />

                <EditText
                    android:id="@+id/purchaseDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtDistrict"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/txtStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/street" />

                <EditText
                    android:id="@+id/purchaseStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtStreet"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/txtHomeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numberHouse" />

                <EditText
                    android:id="@+id/purchaseHouseNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtHomeNumber"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="17sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizeLlayout">

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:text="@string/cancel"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>